<resources>
    <string name="app_name">Chuck Norris Jokes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="shareButtonText">Share</string>
    <string name="chuck_email">gmail@chucknorris.com</string>
    <string name="chuck_norris">Chuck Norris</string>
    <string name="logo_content_description">Account logo</string>
    <string name="all">All</string>
    <string name="explicit">Explicit</string>
    <string name="dev">Dev</string>
    <string name="movies">Movies</string>
    <string name="food">Food</string>
    <string name="celebrity">Celebrity</string>
    <string name="science">Science</string>
    <string name="politics">Politics</string>
    <string name="sports">Sports</string>
    <string name="religion">Religion</string>
    <string name="animals">Animals</string>
    <string name="music">Music</string>
    <string name="history">History</string>
    <string name="travel">Travel</string>
    <string name="career">Career</string>
    <string name="money">Money</string>
    <string name="fashion">Fashion</string>
    <string name="others">Others</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
</resources>
